--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -39,7 +39,7 @@ block body
 			+section("gradInfo")
 				.article.message.is-primary
 					.message-header
-						p Gradutation Information
+						p Graduation Information
 					.message-body
 						p !{graduation.info.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/\n/g, '<br/>')}
 						br
